<resources>
    <string name="app_name">Spider Manager</string>
    <string name="action_settings">Оповещения</string>
    <string name="action_about">О программе</string>
    <!-- Strings used for fragments for navigation -->

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="next">Вперед</string>
    <string name="previous">Назад</string>
    <string name="save">Сохранить</string>
    <string name="add_spider">Добавить паука</string>
    <string name="update_spider">Обновить</string>
    <string name="delete_spider">Удалить</string>
    <string name="spider_name">Кличка</string>
    <string name="spider_age">Возраст(в линьках)</string>
    <string name="spider_type">Вид</string>
    <string name="spider_photo">Фото</string>
    <string name="spider_sex">Пол</string>
    <string name="spider_feeding_date">Дата последней кормежки</string>
    <string name="spider_molting_date">Дата последней линьки</string>
    <string name="view_notifications">Просмотр оповещений</string>
    <string name="off_notification">Выключить оповещение</string>
    <string name="notify_period">Период \nоповещения:</string>
    <string name="notify_period_default">0 дней</string>
    <string name="update_notify_period">Обновить период</string>
    <string name="default_spider">default-spider</string>
    <string name="create">Сохранить</string>
    <string name="delete_notification">Удалить оповещение</string>
    <string name="about">О программе</string>
    <string name="confirm_dialog_title">Подтвердите действие</string>
    <string name="confirm_dialog_accept">Да</string>
    <string name="confirm_dialog_decline">Нет</string>
    <string name="default_id_text">id</string>
    <string name="about_description">Приложение разработано для арахнокиперов и позволяет удобно хранить информацию о питомцах.\n\nОно снабжено системой оповещения, которая поможет не забыть про кормление паука.</string>
    <string name="about_dev">Программу разработала Балашова А.В., группа Б1-ИФСТипу-31. 2022г.</string>


    <string-array name="sex_variants">
        <item>Мужской</item>
        <item>Женский</item>
        <item>Неопределен</item>
    </string-array>

</resources>