<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_purple"
    tools:context="com.app.spidermanager.UpdSpiderFragment">

    <TextView
        android:id="@+id/upd_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/upd_margin"
        android:text="@string/spider_name"
        android:textSize="@dimen/list_font_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upd_photo" />

    <EditText
        android:id="@+id/upd_name_edit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:textSize="@dimen/list_font_size"
        android:labelFor="@id/upd_name"
        app:layout_constraintStart_toStartOf="@id/upd_photo"
        app:layout_constraintTop_toBottomOf="@id/upd_photo"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/upd_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/upd_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:text="@string/spider_sex"
        android:textSize="@dimen/list_font_size"
        app:layout_constraintEnd_toEndOf="@id/upd_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upd_name" />

    <EditText
        android:id="@+id/upd_sex_edit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:textSize="@dimen/list_font_size"
        android:labelFor="@id/upd_sex"
        app:layout_constraintStart_toStartOf="@id/upd_photo"
        app:layout_constraintTop_toBottomOf="@id/upd_name_edit"
        android:inputType="text"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/upd_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:text="@string/spider_type"
        android:textSize="@dimen/list_font_size"
        app:layout_constraintEnd_toEndOf="@id/upd_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upd_sex" />

    <TextView
        android:id="@+id/upd_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:text="@string/spider_age"
        android:textSize="@dimen/list_font_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upd_type" />

    <TextView
        android:id="@+id/upd_feeding_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:text="@string/spider_feeding_date"
        android:textSize="@dimen/list_font_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upd_age" />

    <TextView
        android:id="@+id/upd_molting_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:text="@string/spider_molting_date"
        android:textSize="@dimen/list_font_size"
        app:layout_constraintEnd_toEndOf="@id/upd_feeding_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upd_feeding_date" />


    <ImageView
        android:id="@+id/upd_photo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:contentDescription="@string/default_spider"
        android:src="@mipmap/spider_default_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/main_purple"
        android:layout_marginBottom="@dimen/fab_margin"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/upd_photo"
        app:layout_constraintStart_toStartOf="@id/upd_photo" />
</androidx.constraintlayout.widget.ConstraintLayout>