<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/default_spider"
        android:src="@mipmap/spider_default_foreground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/spider_name"
        android:textSize="@dimen/list_font_size"
        app:layout_constraintLeft_toRightOf="@id/photo"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sex"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:contentDescription="@string/default_spider"
        android:src="@drawable/unknown_sex_icon_foreground"
        app:layout_constraintLeft_toRightOf="@id/photo"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/spider_type"
        android:textSize="@dimen/list_font_size"
        app:layout_constraintLeft_toRightOf="@id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feeding_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/spider_feeding_date"
        android:textSize="@dimen/list_font_size"
        app:layout_constraintLeft_toRightOf="@id/sex"
        app:layout_constraintStart_toStartOf="@id/type"
        app:layout_constraintTop_toBottomOf="@id/type" />

    <Button
        android:id="@+id/button_spider_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/garbage_icon_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>