<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="src_over"
    tools:context="com.app.spidermanager.AboutFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:scaleX="1.7"
        android:scaleY="1.7"
        android:src="@mipmap/back_about_foreground" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150sp"
        android:gravity="center"
        android:text="@string/about"
        android:textSize="24sp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_description"
        android:layout_margin="@dimen/fab_margin"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_dev"
        android:layout_margin="@dimen/fab_margin"
        android:textSize="@dimen/list_font_size"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-28dp">

        <Button
            android:id="@+id/button_back"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/fab_margin"
            android:background="@color/main_purple"
            android:text="@string/previous"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>